src/styles.css
/* EXTERNAL FONTS IMPORTS */
@import url('https://fonts.googleapis.com/css?family=Amaranth');
@import url('https://fonts.googleapis.com/css?family=Open+Sans');
@import url('https://fonts.googleapis.com/css?family=Roboto');
@font-face{
	font-family: 'Hancock';
	src: url('assets/fonts/Hancock.ttf'),
		 url('assets/fonts/Hancock.woff');
}

/* -------------------------GENERAL ANIMATIONS ----------------------- */
.animated {
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.fast {
  -webkit-animation-duration: 0.4s;
  animation-duration: 0.4s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.fadeIn {
  animation-name: fadeIn;
}

/* ------------------------- END GENERAL ANIMATIONS ----------------------*/

/* ------------------------------- GLOBAL STYLES -------------------------- */

body{
	z-index: 600;
	padding-top: 60px;
	padding-bottom: 100px;
	background: -webkit-linear-gradient(#FBEEC1, #eac238ab); /* For Safari 5.1 to 6.0 */
    background: -o-linear-gradient(#FBEEC1, #eac238ab); /* For Opera 11.1 to 12.0 */
    background: -moz-linear-gradient(#FBEEC1, #eac238ab); /* For Firefox 3.6 to 15 */
    background: linear-gradient(#FBEEC1, #eac238ab); /* Standard syntax */
    background-attachment: fixed;
}

@media screen and (max-width: 768px){
	body{
		padding-top: 40px;
		padding-bottom: 20px;
	}
}

*{
	font-family: 'Roboto', sans-serif;
}

p, label{
	color:white;
}

.main-container{
	margin-top: 40px;
}

@media screen and (max-width: 992px){
	.main-container{
		margin-top: 40px;
	}
}

@media screen and (max-width: 592px){
	.main-container{
		padding: 40px;
		margin-top: 00px;
	}
}

.jumbotron{
	background-color: #224e34c9;
	padding-top: 5px !important;
	padding-bottom: 5px !important;
	border-radius: 5px;
	border: 1px solid #224e34c9;
	 -webkit-box-shadow: 0px 1px 1px #224e34c9;
    -moz-box-shadow:    0px 1px 1px #224e34c9;
    box-shadow:         0px 1px 1px #224e34c9;
}

.fa{
	cursor: pointer;
}

/* -------------------- END GLOBAL STYLES ------------------------------ */


/* ----------------------- NAVBAR ITEM STYLES --------------------------- */

.bg-dark{
	background-color: #224e34c9 !important;
}


.navbar{
	position: fixed;
	top: 0px;
	z-index: 500;
	width: 100%;
	border: 1px solid #224e34c9;
	 -webkit-box-shadow: 0px 1px 1px #224e34c9;
    -moz-box-shadow: 0px 1px 1px #224e34c9;
    box-shadow: 0px 1px 1px #224e34c9;
}

.navbar-dark .navbar-nav .nav-link{
	color:white;
}

.nav-link {
	font-size: 18px;
	font-style: italic;
	margin-left: 10px;
	padding-right: 1em !important;
	padding-left: 0.5em !important;
  	font-family: 'Poppins', sans-serif;
  	float: left;
  	position: relative;
  	overflow: hidden;
  	transform: scale(1.0);
    transition: 0.5s all ease;
}

.nav-link:hover{
	transform: scale(1.2);
    transition: 0.5s all ease;
}

.nav-link::after {
  background-color: #224e34c9;
  content: "";
  width: 0;
  height: 3px;
  left: 0;
  bottom: 0;
  transition: width 0.35s ease 0s;
  position: absolute;
}

.nav-link:hover::after {
	margin-left: 5px;
  	width: 80%;
}

.navbar-dark .navbar-nav .active>.nav-link{
	color:#224e34c9;
}

.lenguageIcons{
	margin-left: 10px;
	padding: 2px;
}

@media screen and (max-width: 991px){
	.lenguageIcons{
		margin-top: 20px;
		margin-left: 20px;
	}
}

.flagIcon{
	cursor: pointer;
	width: 30px;
	height: 28px;
	margin-left: 5px;
	border-radius: 22px;
	transform: scale(1.0);
    transition: 0.5s all ease;
}

@media screen and (max-width: 991px){
	.flagIcon{
		width: 25px;
		height: 22px;
	}
}

.flagIcon:hover{
	transform: scale(1.3);
    transition: 0.5s all ease;
}

/* -------------------- END NAVBAR ITEM STYLES ------------------------------ */


/* -------------------------- HOME PAGE STYLES ----------------------------- */

.home-container{
	padding: 20px;
}

div.home-gallery {
    padding: 10px;
    float: left;
    transform: scale(1.0);
    transition: 0.5s all ease;
    width: 50%;
    height: 50%;
}

div.home-gallery:hover {
    transform: scale(1.005);
    transition: 0.5s all ease;
}

div.home-gallery img {
	border-radius: 2px;
    width: 100%;
    height: 100%;
}

div.home-image img{
	border-radius: 2px;
	width: 100%;
	height: auto;
}

@media screen and (max-width: 768px){
	div.home-gallery {
	    padding: 10px;
	    float: left;
	    transform: scale(1.0);
	    transition: 0.5s all ease;
	    width: 100%;
	    height: 100%;
	}
}

@media screen and (max-width: 574px){
	div.home-gallery {
	    padding: 10px;
	    float: left;
	    transform: scale(1.0);
	    transition: 0.5s all ease;
	    width: 100%;
	    height: 100%;
	}
}

.main-title{
	font-family: 'Hancock';
	font-size: 60px;
	font-style: normal;
	color: #FBEEC1;
}

@media screen and (max-width: 1024px){
	.main-title{
		font-size: 40px;
	}
}

@media screen and (max-width: 520px){
	.main-title{
		font-size: 30px;
	}
}

@media screen and (max-width: 375px){
	.main-title{
		font-size: 20px;
	}
}

.main-images{
	border-radius: 5px;
	border: 1px solid #FBEEC1;
	 -webkit-box-shadow: 0px 1px 1px #FBEEC1;
    -moz-box-shadow:    0px 1px 1px #FBEEC1;
    box-shadow:         0px 1px 1px #FBEEC1;

}

hr.newStyle {
	height: 10px;
	border: 0;
	box-shadow: 0 10px 10px -10px #FBEEC1 inset;
}

.wellcome-text{
	font-size: 40px;
}

@media screen and (max-width: 500px){
	.wellcome-text{
		font-size: 28px;
	}
}

/* -------------------- END HOME PAGE STYLES ------------------------------ */


/* ---------------------- THE HOUSE PAGE STYLES ---------------------------- */

div.house-gallery {
	margin-left: 10px;
    padding: 10px;
    float: left;
    transform: scale(1.0);
    transition: 0.5s all ease;
    width: 50%;
    height: 50%;
}

div.house-gallery:hover {
    transform: scale(1.005);
    transition: 0.5s all ease;
}

div.house-gallery img {
	border-radius: 2px;
    width: 100%;
    height: 100%;
}

div.house-image img{
	border-radius: 2px;
	width: 100%;
	height: auto;
}

@media screen and (max-width: 768px){
	div.house-gallery {
		margin: 0px;
	    padding: 10px;
	    float: left;
	    transform: scale(1.0);
	    transition: 0.5s all ease;
	    width: 100%;
	    height: 100%;
	}
}

@media screen and (max-width: 574px){
	div.house-gallery {
	    padding: 10px;
	    float: left;
	    transform: scale(1.0);
	    transition: 0.5s all ease;
	    width: 100%;
	    height: 100%;
	}
}
/* --------------------- END THE HOUSE PAGE STYLES ------------------------- */



/* ----------------------- SERVICE LIST PAGE STYLES ---------------------------- */

.service-container{
	margin-top: 20px;
	margin-bottom: 50px;
}

.service-list{
	padding: 5px;
	font-size: 14px;
	color: #224e34c9;
	transition: all .3s;
	-webkit-animation-duration: 1s;
  	animation-duration: 1s;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
  	animation-name: fadeIn;
}

.service-title{
	font-size: 16px;
	color: #224e34c9;
}

.service-item{
	cursor: pointer;
	transform: scale(1.0);
    transition: 0.5s all ease;
}

.service-item:hover{
	border: 1px solid;
	border-color: #224e34c9;
	transform: scale(1.01);
    transition: 0.5s all ease;
}

.service-icons{
	width: 60px;
	height: 60px;
}

@media screen and (max-width: 768px){
	.service-icons{
		width: 40px;
		height: 40px;
	}
}

/* -------------------- END SERVICES PAGE STYLES ------------------------------ */


/* ----------------------- GALLERY PAGE STYLES ------------------------------ */

div.gallery {
    padding: 10px;
    float: left;
    transform: scale(1.0);
    transition: 0.5s all ease;
    width: 100%;
    height: 100%;
}

div.gallery:hover {
    transform: scale(1.1);
    transition: 0.5s all ease;
}

div.gallery img {
	border-radius: 2px;
    width: 100%;
    height: 100%;
}

@media screen and (max-width: 768px){

	div.gallery {
	    padding: 10px;
	    float: left;
	    transform: scale(1.0);
	    transition: 0.5s all ease;
	    width: 33%;
	    height: 33%;
	}
}

div.desc {
    padding: 15px;
    text-align: center;
}

/* -------------------- END GALLERY PAGE STYLES ------------------------------ */



/* ----------------------- PRICES/RATES PAGE STYLES ------------------------- */

.table{
	border: 1px solid;
	border-radius: 10px !important;
	border-color: #224e34c9;
}

@media screen and (max-width: 768px){
	.table{
		font-size: 12px;
	}
}

@media screen and (max-width: 592px){
	.table{
		font-size: 10px;
	}
}

@media screen and (max-width: 425px){
	.table{
		font-size: 8px;
	}
}

.table thead th{
	border-bottom: none;
}

.table th{
	border-top: none;
}

.table td{
	border-top: none;
}

/* -------------------- END PRICES/RATES PAGE STYLES ------------------------------ */



/* ------------------------ RESERVATION PAGE STYLES ------------------------------*/

.pricing-data{
	padding-bottom: 0px !important;
}

.reservation-form{
	padding-top: 20px;
	padding-bottom: 20px;
}

.page-title{
	color: #224e34c9;
}

/* -------------------- END RESERVATION PAGE STYLES ------------------------------ */



/* ------------------------- HOT TO GET PAGE STYLES ------------------------- */

.map{
	width: 100%;
	height: 400px;
	border-radius: 5px;
}

@media screen and (max-width: 576px){
	.map{
		height: 300px;
	}
}

@media screen and (max-width: 442px){
	.map{
		height: 250px;
	}
}

.custom_map{
	width: 100%;
	height: 400px;
	border-radius: 5px;
}

@media screen and (max-width: 576px){
	.custom_map{
		height: 300px;
	}
}

@media screen and (max-width: 442px){
	.custom_map{
		height: 250px;
	}
}

.indications{
	margin: 50px;
}

@media screen and (max-width: 576px){
	.indications{
		font-size: 12px;
	}
}

.adp, .adp table{
	color: white !important;
}

.adp-step, .adp-text{
	color: #224e34c9;
	background-color: #FBEEC1 !important;
}

img.adp-marker{
	background-color: #FBEEC1;
}

@media screen and (max-width: 768px){
	.form-control{
		width: 85% !important;
	}
}

/* -------------------- END HOW TO GET PAGE STYLES ------------------------------ */



/* --------------------- FOOTER ITEMS STYLES ---------------------------- */

.footer{
	bottom: 0px;
	height: 30px;
	position: fixed;
	width: 100%;
	border: 1px solid #224e34c9;
	-webkit-box-shadow: 0px -1px 1px #224e34c9;
    -moz-box-shadow: 0px -1px 1px #224e34c9;
    box-shadow: 0px -1px 1px #224e34c9;
}

@media screen and (max-width: 658px){
	.footer{
		height: 30px;
	}
}

.footer-contact{
	font-size: 12px;
}

@media screen and (max-width: 658px){
	.footer-contact{
		padding-right: 0px;
	}
}

@media screen and (max-width: 658px){
	.footer-contact{
		font-size: 10px;
	}
}

@media screen and (max-width: 548px){
	.footer-contact{
		font-size: 8px;
	}
}

.socialMediaFooter{
	padding-right: 20px;
	font-size: 20px;
}

.socialMediaFooter .fa{
	color: #224e34c9;
}

@media screen and (max-width: 690px){
	.socialMediaFooter{
		
	}
}

@media screen and (max-width: 650px){
	.socialMediaFooter{
		margin-top: -5px;
	}
}

@media screen and (max-width: 584px){
	.socialMediaFooter{
		margin-top: -15px;
	}
}

@media screen and (max-width: 400px){
	.socialMediaFooter{
		margin-top: 5px;
		font-size: 14px;
	}
}

/* -------------------- END FOOTER ITEMS STYLES ------------------------------ */

